LPS-108637 Add appropriate bottom margin to avoid covering bottom elements

--- a/modules/apps/site-navigation/site-navigation-admin-web/src/main/resources/META-INF/resources/css/SiteNavigationMenuEditor.scss
+++ b/modules/apps/site-navigation/site-navigation-admin-web/src/main/resources/META-INF/resources/css/SiteNavigationMenuEditor.scss
@@ -23,6 +23,7 @@ body.open .site-navigation-management-bar {
 }
 
 .site-navigation-content {
+	margin-bottom: $managementBarHeight + $managementBarMarginBottom;
 	top: $managementBarHeight + $managementBarMarginBottom;
 }
 
